--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
+    "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-slick": "^0.27.13",
+    "react-slideshow-image": "^3.3.1",
     "react-typical": "^0.1.3",
-    "react-typing-effect": "^2.0.4"
+    "react-typing-effect": "^2.0.4",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
