--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "homepage": "https://papi-root.github.io/seneservice",
   "dependencies": {
+    "-": "0.0.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -13,13 +15,17 @@
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
+    "react-chatbot-kit": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.27.13",
     "react-slideshow-image": "^3.3.1",
     "react-typical": "^0.1.3",
     "react-typing-effect": "^2.0.4",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
